[package]
name = "lorenz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom = { version = "*", features = ["js"] }
eframe = { version = "*", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
tracing-wasm = "0.2.1"
log = "0.4.18"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
